Desempolvar
Pequeñas mejoras al codigo buscando mejorar el codigo del semestre pasado